--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -1,5 +1,5 @@
 server.port=${PORT:8000}
-message = Hello Spring Cloud!!!
+message = Hello Spring Cloud!!! XXX
 
 # define the destination to which the input MessageChannel should be bound
 spring.cloud.stream.bindings.input.destination = reservations
